# database-for-embedded

./: Cargo.toml  README.md  cargo.toml
.cargo/: config
src/: lib.rs  main.rs  memory.x
src/domain/: kv_store.rs  mod.rs
