[package]
name = "db-4-embedded"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
embedded-hal = "1.0.0"
heapless = "0.9.2"
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "rtic", "medium"]}
defmt-test = "0.4.0"

[[bin]]
name = "db-4-embedded"
test = false

[lib]
harness = false